polyfill for promise, so it can work on older devices

--- a/bin/index.html
+++ b/bin/index.html
@@ -22,6 +22,7 @@
 	<body>
 		<canvas id="canvas" width="320" height="320"></canvas>
 	</body>
+    <script src="lib/promise.js"></script>
 	<script src="lib/jsfxr.js"></script>
 	<script src="app.js"></script>
 </html>
