--- a/index.html
+++ b/index.html
@@ -22,5 +22,7 @@
 	<body>
 		<canvas id="canvas" width="320" height="320"></canvas>
 	</body>
-	<script src="app.min.js"></script>
+    <script src="lib/promise.js"></script>
+	<script src="lib/jsfxr.js"></script>
+	<script src="app.js"></script>
 </html>
