audio manager howler

--- a/bin/index.html
+++ b/bin/index.html
@@ -23,6 +23,7 @@
 		<canvas id="canvas" width="320" height="320"></canvas>
 	</body>
     <script src="lib/promise.js"></script>
+    <script src="lib/howler.min.js"></script>
 	<script src="lib/jsfxr.js"></script>
 	<script src="app.js"></script>
 </html>
